Last Minute Changes
Made gallery images smaller. Changed archive modal background image size. Deleted a slideshow image.

--- a/public art.html
+++ b/public art.html
@@ -46,6 +46,7 @@
             <p><i>Clearing</i> is an integrated network of abstract objects which reproduce parts of a painting. Seven interlocking porcelain enamel panels line the central pathway, ranging in height from eighteen inches to six feet. Panels create abstractions of both site and installation, either integrating the reproduced artwork on their front faces with the living landscape behind, or occupying space as monolithic blocks of color on the inverse.</p>
             <p>The centerpiece of Sacramento’s Burnett Miller Park, <i>Clearing</i> mediates surface, depth-of-field, and perspective.</p>
             <p>Assisted by Galen Pardee</p>
+            <p>Fabricator: KVO Industries, Santa Rosa CA</p>
             <p>Photography by Joan Cusick And Injinash Unshin</p>
           </div>
           <img class="gallery-img first" src="./images/public art/JCP_0746-X3.jpg">
@@ -62,14 +63,14 @@
           <img class="gallery-img first" src="./images/public art/JCP_0952-X3.jpg">
           <div class="gallery-img second gallery-description">
             <h2>Rug Project</h2>
-            <p>Werfel was approached by Mehraban in the spring of 2018 about the possibility of rendering her painting “Roma” in a fine art rug. This collaboration is part of an effort by Mehraban to close the gap between the arts. Mehraban was attracted to Werfel's color palette, lively lines and composition. By creating this rug, collectors can own versions of “Roma” and experience the work in a new, more tactile way. Longstanding Los Angeles rug dealers, Mehraban was originally established in Tehran in 1945. They have been a fixture in the design scene on La Cienega Blvd in Los Angeles for more than thirty-five years.</p>
+            <p>Werfel was approached by Mehraban Rugs in the spring of 2018 about the possibility of rendering her painting “Roma” in a fine art rug. This collaboration is part of an effort by Mehraban to close the gap between the arts. Mehraban was attracted to Werfel's color palette, lively lines and composition. By creating this rug, collectors can own versions of “Roma” and experience the work in a new, more tactile way. Longstanding Los Angeles rug dealers, Mehraban was originally established in Tehran in 1945. They have been a fixture in the design scene on La Cienega Blvd in Los Angeles for more than thirty-five years.</p>
             <p>The rug woven from Werfel's artwork is a 150 knot Tibetan Carpet. This is the highest quality Tibetan knot rug. It is woven in Mehraban's workshop in Kathmandu, Nepal. The content is 50% Tibetan handspan wool and 50% Chinese raw silk. It is being woven in a 9’ x 12’ size.</p>
           </div>
           <img class="gallery-img second" src="./images/public art/Roma in Room 1.jpg">
           <img class="gallery-img second" src="./images/public art/Roma Visualization.jpg">
-          <img class="gallery-img second" src="./images/public art/IMG_6600.jpg">
-          <img class="gallery-img second" src="./images/public art/IMG_6601.jpg">
           <img class="gallery-img second" src="./images/public art/IMG_6602.jpg">
+          <img class="gallery-img second" src="./images/public art/IMG_6601.jpg">
+          <img class="gallery-img second" src="./images/public art/IMG_6600.jpg">
 
         <!-- Gallery container for the bottom navigation-->
         <!-- Click an image to jump to it, use overflow to scroll through them -->
