Last Last Minute Change
Changed clearing to public art

--- a/public art.html
+++ b/public art.html
@@ -30,7 +30,7 @@
     <div class="content-wrapper">
       <!-- Tab Container -->
       <div class="tab">
-        <a class="tab-link" onclick="currentImg(1)">Clearing</a>
+        <a class="tab-link" onclick="currentImg(1)">Public Art</a>
         <a class="tab-link" onclick="currentImg(14)">Rug Project</a>
       </div>
       <!-- Clearing tab gallery container -->
