Post Payment Updates
Added a favicon icon. Added an active graphic to the special projects tabs. Updated the Clearing text and added images to the two slide descriptions.

--- a/public art.html
+++ b/public art.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <meta name="keywords" content="Gina Werfel, Prince Street Gallery, Artist">
+    <link rel="shortcut icon" href="./images/Duet Favicon.jpg" type="image/jpg">
   	<title>Special Projects | Gina Werfel</title>
   </head>
 
@@ -30,8 +31,8 @@
     <div class="content-wrapper">
       <!-- Tab Container -->
       <div class="tab">
-        <a class="tab-link" onclick="currentImg(1)">Public Art</a>
-        <a class="tab-link" onclick="currentImg(14)">Rug Project</a>
+        <a id="tab-1" class="tab-link" onclick="currentImg(1);tabHighlight(1)">Public Art</a>
+        <a id="tab-2" class="tab-link" onclick="currentImg(14);tabHighlight(2)">Rug Project</a>
       </div>
       <!-- Clearing tab gallery container -->
       <div class="gallery">
@@ -43,11 +44,11 @@
           <!-- Gallery images -->
           <div class="gallery-img first gallery-description">
             <h2>Clearing</h2>
-            <p><i>Clearing</i> is an integrated network of abstract objects which reproduce parts of a painting. Seven interlocking porcelain enamel panels line the central pathway, ranging in height from eighteen inches to six feet. Panels create abstractions of both site and installation, either integrating the reproduced artwork on their front faces with the living landscape behind, or occupying space as monolithic blocks of color on the inverse.</p>
-            <p>The centerpiece of Sacramento’s Burnett Miller Park, <i>Clearing</i> mediates surface, depth-of-field, and perspective.</p>
+            <p>CLEARING in R. Burnett Miller Park in Sacramento CA consists of seven porcelain enamel panels which, like pieces of a puzzle, interlock to reproduce an abstract painting, entitled Thicket, which emerges as visitors interact with the installation. Ranging in height from eighteen inches to six feet, the panels integrate the artwork on their front sides with the living landscape behind to create composite abstractions; on the reverse, the panels occupy space as monolithic blocks of color.</p>
             <p>Assisted by Galen Pardee</p>
             <p>Fabricator: KVO Industries, Santa Rosa CA</p>
-            <p>Photography by Joan Cusick And Injinash Unshin</p>
+            <p>Photography by Joan Cusick And Injinash Unshin</p><br>
+            <img src="./images/public art/Thicket.jpg">
           </div>
           <img class="gallery-img first" src="./images/public art/JCP_0746-X3.jpg">
           <img class="gallery-img first" src="./images/public art/JCP_0768-X3.jpg">
@@ -64,10 +65,10 @@
           <div class="gallery-img second gallery-description">
             <h2>Rug Project</h2>
             <p>Werfel was approached by Mehraban Rugs in the spring of 2018 about the possibility of rendering her painting “Roma” in a fine art rug. This collaboration is part of an effort by Mehraban to close the gap between the arts. Mehraban was attracted to Werfel's color palette, lively lines and composition. By creating this rug, collectors can own versions of “Roma” and experience the work in a new, more tactile way. Longstanding Los Angeles rug dealers, Mehraban was originally established in Tehran in 1945. They have been a fixture in the design scene on La Cienega Blvd in Los Angeles for more than thirty-five years.</p>
-            <p>The rug woven from Werfel's artwork is a 150 knot Tibetan Carpet. This is the highest quality Tibetan knot rug. It is woven in Mehraban's workshop in Kathmandu, Nepal. The content is 50% Tibetan handspan wool and 50% Chinese raw silk. It is being woven in a 9’ x 12’ size.</p>
+            <p>The rug woven from Werfel's artwork is a 150 knot Tibetan Carpet. This is the highest quality Tibetan knot rug. It is woven in Mehraban's workshop in Kathmandu, Nepal. The content is 50% Tibetan handspan wool and 50% Chinese raw silk. It is being woven in a 9’ x 12’ size.</p><br>
+            <img src="./images/public art/Roma Visualization.jpg">
           </div>
           <img class="gallery-img second" src="./images/public art/Roma in Room 1.jpg">
-          <img class="gallery-img second" src="./images/public art/Roma Visualization.jpg">
           <img class="gallery-img second" src="./images/public art/IMG_6602.jpg">
           <img class="gallery-img second" src="./images/public art/IMG_6601.jpg">
           <img class="gallery-img second" src="./images/public art/IMG_6600.jpg">
@@ -96,10 +97,9 @@
           <img class="gallery-icon" onclick="currentImg(13)" src="./images/public art/icons/JCP_0952-X3 icon.jpg">
           <img class="gallery-icon" onclick="currentImg(14)" src="./images/public art/icons/mehraban1 icon.png">
           <img class="gallery-icon" onclick="currentImg(15)" src="./images/public art/icons/Roma in Room 1 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(16)" src="./images/public art/icons/Roma Visualization icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(17)" src="./images/public art/icons/IMG_6600 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(18)" src="./images/public art/icons/IMG_6601 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(19)" src="./images/public art/icons/IMG_6602 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(16)" src="./images/public art/icons/IMG_6602 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(17)" src="./images/public art/icons/IMG_6601 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(18)" src="./images/public art/icons/IMG_6600 icon.jpg">
         </div>
       </div>
     </div>
