--- a/about.html
+++ b/about.html
@@ -43,9 +43,7 @@
         New York, NY 10001<br>
         (646)230-0246</p>
         <h3>IdeelArt</h3>
-        <p><a href="http://www.ideelart.com/artists/1351-gina-werfel.html" target="_blank" rel="nofollow">http://www.ideelart.com/artists/1351-gina-werfel.html</a></p>
-        <h3>Adler&Co Gallery</h3>
-        <p><a href="http://www.adlerandco.com/werfel/index.html" target="_blank" rel="nofollow">http://www.adlerandco.com/werfel/index.html</a></p><br>
+        <p><a href="http://www.ideelart.com/artists/1351-gina-werfel.html" target="_blank" rel="nofollow">http://www.ideelart.com/artists/1351-gina-werfel.html</a></p><br>
 
         <h3><a id="cv" href="./GW_cv.pdf" target="_blank" rel="nofollow">Curriculum Vitae</a></h3><br>
 
