New Favicon + Edits
Added a new favicon and a bunch of test ones, and added the html head code for each file. Made a few edits.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   	<meta name="description" content="Gina Werfel is an artist whose painterly abstract paintings derive from moving and interacting with her surroundings.">
   	<meta name="keywords" content="Gina Werfel, Prince Street Gallery, Artist">
-  	<link rel="shortcut icon" href="./images/Duet Favicon.jpg" type="image/jpg">
+  	<link rel="icon" href="./images/Galaxy Favicon.jpg" type="image/jpg">
+  	<link rel="shortcut icon" href="./images/Galaxy Favicon.jpg" type="image/jpg">
+  	<link rel="apple-touch-icon" href="./images/Galaxy Favicon.jpg" type="image/jpg">
   	<title>Home | Gina Werfel</title>
   </head>
 
