--- a/about.html
+++ b/about.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <meta name="keywords" content="Gina Werfel, Prince Street Gallery, Artist">
-    <link rel="shortcut icon" href="./images/Duet Favicon.jpg" type="image/jpg">
+    <link rel="icon" href="./images/Galaxy Favicon.jpg" type="image/jpg">
+    <link rel="shortcut icon" href="./images/Galaxy Favicon.jpg" type="image/jpg">
+    <link rel="apple-touch-icon" href="./images/Galaxy Favicon.jpg" type="image/jpg">
   	<title>About | Gina Werfel</title>
   </head>
 
