--- a/news.html
+++ b/news.html
@@ -9,6 +9,14 @@
     <link rel="icon" href="./images/Galaxy Favicon.jpg" type="image/jpg">
     <link rel="shortcut icon" href="./images/Galaxy Favicon.jpg" type="image/jpg">
     <link rel="apple-touch-icon" href="./images/Galaxy Favicon.jpg" type="image/jpg">
+    <meta property="og:image:url" content="http://ginawerfel.com/images/Galaxy-FB-Favicon.jpg">
+    <meta property="og:image:width" content="1080">
+    <meta property="og:image:height" content="1080">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://ginawerfel.com/news.html">
+    <meta property="og:title" content="Press | Gina Werfel">
+    <meta property="og:description" content="Gina Werfel is an artist whose painterly abstract paintings derive from moving and interacting with her surroundings.">
+    <meta property="fb:app_id" content="506666969839633">
   	<title>Press | Gina Werfel</title>
   </head>
 
