--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
   	<link rel="icon" href="./images/Galaxy Favicon.jpg" type="image/jpg">
   	<link rel="shortcut icon" href="./images/Galaxy Favicon.jpg" type="image/jpg">
   	<link rel="apple-touch-icon" href="./images/Galaxy Favicon.jpg" type="image/jpg">
+  	<meta property="og:image:url" content="http://ginawerfel.com/images/Galaxy-FB-Favicon.jpg">
+  	<meta property="og:image:width" content="1080">
+  	<meta property="og:image:height" content="1080">
+  	<meta property="og:type" content="website">
+  	<meta property="og:url" content="http://ginawerfel.com">
+  	<meta property="og:title" content="Home | Gina Werfel">
+  	<meta property="og:description" content="Gina Werfel is an artist whose painterly abstract paintings derive from moving and interacting with her surroundings.">
+  	<meta property="fb:app_id" content="506666969839633">
   	<title>Home | Gina Werfel</title>
   </head>
 
@@ -40,9 +48,9 @@
       <div class="slideshow">
         <!-- Slideshow images -->
         <img class="slide-img" src="./images/slide show/IMG_0317.jpg">
-        <img class="slide-img" src="./images/slide show/Borders.jpg">
         <img class="slide-img" src="./images/slide show/Fast Forward.jpg">
         <img class="slide-img" src="./images/slide show/Gina Cooler-2.jpg">
+        <img class="slide-img" src="./images/slide show/Borders.jpg">
         <img class="slide-img" src="./images/slide show/IMG_9362.jpg">
         <img class="slide-img" src="./images/slide show/IMG_9452.jpg">
         <img class="slide-img" src="./images/slide show/Notation.jpg">
