--- a/index.html
+++ b/index.html
@@ -47,15 +47,18 @@
       <!-- Slideshow container -->
       <div class="slideshow">
         <!-- Slideshow images -->
-        <img class="slide-img" src="./images/slide show/IMG_0317.jpg">
-        <img class="slide-img" src="./images/slide show/Fast Forward.jpg">
+        <!--img class="slide-img" src="./images/slide show/IMG_0317.jpg"-->
+        <!--img class="slide-img" src="./images/slide show/Fast Forward.jpg"-->
+        <img class="slide-img" src="./images/slide show/Movement, 36_x72_ diptych, acrylic, 2018.jpg">
+        <img class="slide-img" src="./images/slide show/Sunset Route, 48_x48_,  acrylic and mixed media, 2019.jpg">
         <img class="slide-img" src="./images/slide show/Gina Cooler-2.jpg">
         <img class="slide-img" src="./images/slide show/Borders.jpg">
         <img class="slide-img" src="./images/slide show/IMG_9362.jpg">
         <img class="slide-img" src="./images/slide show/IMG_9452.jpg">
         <img class="slide-img" src="./images/slide show/Notation.jpg">
         <img class="slide-img" src="./images/slide show/Roma.jpg">
-        <img class="slide-img" src="./images/slide show/Skeletal Structure.jpg">
+        <img class="slide-img" src="./images/slide show/Beach, 30_x22_, acrylic and mixed media, 2018.jpg">
+        <!--img class="slide-img" src="./images/slide show/Skeletal Structure.jpg"-->
       </div>
     </div>
     <!-- Call the slideshow script -->
