--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Slideshow images -->
         <!--img class="slide-img" src="./images/slide show/IMG_0317.jpg"-->
         <!--img class="slide-img" src="./images/slide show/Fast Forward.jpg"-->
-        <img class="slide-img" src="./images/slide show/Movement, 36_x72_ diptych, acrylic, 2018.jpg">
+        <img class="slide-img wide" src="./images/slide show/Movement, 36_x72_ diptych, acrylic, 2018.jpg">
         <img class="slide-img" src="./images/slide show/Sunset Route, 48_x48_,  acrylic and mixed media, 2019.jpg">
         <img class="slide-img" src="./images/slide show/Gina Cooler-2.jpg">
         <img class="slide-img" src="./images/slide show/Borders.jpg">
