--- a/painting.html
+++ b/painting.html
@@ -47,20 +47,22 @@
         <!-- Gallery container for images -->
         <div class="gallery-main">
           <!-- Gallery images -->
-          <img class="gallery-img" src="./images/paintings/IMG_3856.jpg">
-          <img class="gallery-img" src="./images/paintings/Galaxy.jpg">
-          <img class="gallery-img" src="./images/paintings/Gina Cooler-2.jpg">
-          <img class="gallery-img" src="./images/paintings/Gina Cooler-11.jpg">
-          <img class="gallery-img" src="./images/paintings/IMG_3927.jpg">
-          <img class="gallery-img" src="./images/paintings/IMG_9405.jpg">
-          <img class="gallery-img" src="./images/paintings/IMG_3916.jpg">
-          <img class="gallery-img" src="./images/paintings/IMG_9349.jpg">
-          <img class="gallery-img" src="./images/paintings/IMG_9362.jpg">
-          <img class="gallery-img" src="./images/paintings/IMG_9369.jpg">
-          <img class="gallery-img" src="./images/paintings/IMG_9383.jpg">
-          <img class="gallery-img" src="./images/paintings/Borders.jpg">
-          <img class="gallery-img" src="./images/paintings/Constellation.jpg"><!--"Singapore", 60"x48", 2017-->
-          <img class="gallery-img" src="./images/paintings/Tumble 60x48 2017.jpg"><!--"Tumble", 60"x48", oil on canvas, 2017-->
+          <img class="gallery-img" src="./images/paintings/01 Red Dress, 48_x36_, oil, 2019.jpg">
+          <img class="gallery-img" src="./images/paintings/02 Sunset Route, 48_x48_,  acrylic and mixed media, 2019.jpg">
+          <img class="gallery-img" src="./images/paintings/03 Ceiling, 60_x48_, acrylic, 2019.jpg">
+          <img class="gallery-img" src="./images/paintings/04 Embroidered, 48_x36_, oil, 2018.jpg">
+          <img class="gallery-img" src="./images/paintings/05 IMG_3856.jpg">
+          <img class="gallery-img" src="./images/paintings/06 Galaxy.jpg">
+          <img class="gallery-img" src="./images/paintings/07 Gina Cooler-2.jpg">
+          <img class="gallery-img" src="./images/paintings/08 Gina Cooler-11.jpg">
+          <img class="gallery-img" src="./images/paintings/09 IMG_9405.jpg">
+          <img class="gallery-img" src="./images/paintings/10 IMG_3916.jpg">
+          <img class="gallery-img" src="./images/paintings/11 Sketch, 20_x16_, acrylic, 2019.jpg">
+          <img class="gallery-img" src="./images/paintings/12 IMG_9349.jpg">
+          <img class="gallery-img" src="./images/paintings/13 IMG_9362.jpg">
+          <img class="gallery-img" src="./images/paintings/14 IMG_9369.jpg">
+          <img class="gallery-img" src="./images/paintings/15 Borders.jpg">
+          <img class="gallery-img" src="./images/paintings/16 Tumble 60x48 2017.jpg">
         </div>
 
         <!-- Gallery container for the image information -->
@@ -91,20 +93,22 @@
             <a class="next-button" onclick="plusImg(1)">❯</a>
           </div!>
           <!-- Gallery navigation icon buttons -->
-          <img class="gallery-icon" onclick="currentImg(1)" src="./images/paintings/icons/IMG_3856 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(2)" src="./images/paintings/icons/Galaxy icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(3)" src="./images/paintings/icons/Gina Cooler-2 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(4)" src="./images/paintings/icons/Gina Cooler-11 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(5)" src="./images/paintings/icons/IMG_3927 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(6)" src="./images/paintings/icons/IMG_9405 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(7)" src="./images/paintings/icons/IMG_3916 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(8)" src="./images/paintings/icons/IMG_9349 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(9)" src="./images/paintings/icons/IMG_9362 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(10)" src="./images/paintings/icons/IMG_9369 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(12)" src="./images/paintings/icons/IMG_9383 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(13)" src="./images/paintings/icons/Borders icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(14)" src="./images/paintings/icons/Constellation icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(15)" src="./images/paintings/icons/Tumble 60x48 2017 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(1)" src="./images/paintings/icons/01 Red Dress, 48_x36_, oil, 2019 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(2)" src="./images/paintings/icons/02 Sunset Route, 48_x48_,  acrylic and mixed media, 2019 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(3)" src="./images/paintings/icons/03 Ceiling, 60_x48_, acrylic, 2019 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(4)" src="./images/paintings/icons/04 Embroidered, 48_x36_, oil, 2018 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(5)" src="./images/paintings/icons/05 IMG_3856 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(6)" src="./images/paintings/icons/06 Galaxy icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(7)" src="./images/paintings/icons/07 Gina Cooler-2 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(8)" src="./images/paintings/icons/08 Gina Cooler-11 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(9)" src="./images/paintings/icons/09 IMG_9405 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(10)" src="./images/paintings/icons/10 IMG_3916 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(11)" src="./images/paintings/icons/11 Sketch, 20_x16_, acrylic, 2019 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(12)" src="./images/paintings/icons/12 IMG_9349 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(13)" src="./images/paintings/icons/13 IMG_9362 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(14)" src="./images/paintings/icons/14 IMG_9369 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(15)" src="./images/paintings/icons/15 Borders icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(16)" src="./images/paintings/icons/16 Tumble 60x48 2017 icon.jpg">
         </div>
       </div>
     </div>
