Gallery Navigation Update
Changed the way the navigation icons work for the image galleries. The nav bar will show a set of six images, and clicking the navigation arrows with switch between the sets of six images. Now it will switch sets while scrolling through images using the main gallery overlay. Created a new navigation index, code to determine it, and a helper function to display the correct set of icons. Created a helper function to switch navigation sets. Added the new functions to the gallery html. Edited the styling to stop the icons from being cut off.

--- a/painting.html
+++ b/painting.html
@@ -67,21 +67,22 @@
 
         <!-- Gallery container for the image information -->
         <div class="gallery-info">
-          <div class="info"><i>Trace</i><br>60 x 48 in<br>oil on canvas<br>2017</div>
-          <div class="info">info</div>
-          <div class="info">info</div>
-          <div class="info">info</div>
-          <div class="info">info</div>
-          <div class="info">info</div>
-          <div class="info">info</div>
-          <div class="info">info</div>
-          <div class="info">info</div>
-          <div class="info">info</div>
-          <div class="info">info</div>
-          <div class="info">info</div>
-          <div class="info">info</div>
-          <div class="info">info</div>
-          <div class="info">info</div>
+          <div class="info"><i>title1</i><br>dimensions<br>medium<br>date</div>
+          <div class="info"><i>title2</i><br>dimensions<br>medium<br>date</div>
+          <div class="info"><i>title3</i><br>dimensions<br>medium<br>date</div>
+          <div class="info"><i>title4</i><br>dimensions<br>medium<br>date</div>
+          <div class="info"><i>title5</i><br>dimensions<br>medium<br>date</div>
+          <div class="info"><i>title6</i><br>dimensions<br>medium<br>date</div>
+          <div class="info"><i>title7</i><br>dimensions<br>medium<br>date</div>
+          <div class="info"><i>title8</i><br>dimensions<br>medium<br>date</div>
+          <div class="info"><i>title9</i><br>dimensions<br>medium<br>date</div>
+          <div class="info"><i>title10</i><br>dimensions<br>medium<br>date</div>
+          <div class="info"><i>title11</i><br>dimensions<br>medium<br>date</div>
+          <div class="info"><i>title12</i><br>dimensions<br>medium<br>date</div>
+          <div class="info"><i>title13</i><br>dimensions<br>medium<br>date</div>
+          <div class="info"><i>title14</i><br>dimensions<br>medium<br>date</div>
+          <div class="info"><i>title15</i><br>dimensions<br>medium<br>date</div>
+          <div class="info"><i>title16</i><br>dimensions<br>medium<br>date</div>
         </div>
 
         <!-- Gallery container for the bottom navigation-->
@@ -89,8 +90,8 @@
         <div class="gallery-nav">
           <!-- Gallery container for the main buttons that go to the next image -->
           <div class="gallery-buttons">
-            <a class="prev-button" onclick="plusImg(-1)">❮</a>
-            <a class="next-button" onclick="plusImg(1)">❯</a>
+            <a class="prev-button" onclick="plusNav(-1)">❮</a>
+            <a class="next-button" onclick="plusNav(1)">❯</a>
           </div!>
           <!-- Gallery navigation icon buttons -->
           <img class="gallery-icon" onclick="currentImg(1)" src="./images/paintings/icons/01 Red Dress, 48_x36_, oil, 2019 icon.jpg">
