--- a/paper.html
+++ b/paper.html
@@ -73,8 +73,8 @@
         <div class="gallery-nav">
           <!-- Gallery container for the main buttons that go to the next image -->
           <div class="gallery-buttons">
-            <a class="prev-button" onclick="plusImg(-1)">❮</a>
-            <a class="next-button" onclick="plusImg(1)">❯</a>
+            <a class="prev-button" onclick="plusNav(-1)">❮</a>
+            <a class="next-button" onclick="plusNav(1)">❯</a>
           </div>
           <!-- Gallery navigation icon buttons -->
           <img class="gallery-icon" onclick="currentImg(1)" 
