--- a/paper.html
+++ b/paper.html
@@ -28,7 +28,7 @@
       	<nav class="navigation">
       	  <a href="./painting.html">Paintings</a>
       	  <a href="./paper.php" class="active">Works On Paper</a>
-      	  <a href="./public art.html">Special Projects</a>
+      	  <a href="./public-art.html">Special Projects</a>
       	  <a href="./archive.html">Archive</a>
           <!--a href="./reviews.html">Publications</a-->
       	  <a href="./news.html">Press</a>
