--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       	<nav class="homepage navigation">
       	  <a href="./painting.php">Paintings</a>
       	  <a href="./paper.php">Works On Paper</a>
-      	  <a href="./public art.html">Special Projects</a>
+      	  <a href="./public-art.html">Special Projects</a>
       	  <a href="./archive.php">Archive</a>
       	  <!--a href="./reviews.html">Publications</a-->
       	  <a href="./news.html">Press</a>
