--- a/painting.html
+++ b/painting.html
@@ -28,7 +28,7 @@
       	<nav class="navigation">
       	  <a href="./painting.php" class="active">Paintings</a>
       	  <a href="./paper.html">Works On Paper</a>
-      	  <a href="./public art.html">Special Projects</a>
+      	  <a href="./public-art.html">Special Projects</a>
       	  <a href="./archive.html">Archive</a>
       	  <!--a href="./reviews.html">Publications</a-->
       	  <a href="./news.html">Press</a>
