--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
         New York, NY 10001<br>
         (646)230-0246</p>
         <h3>IdeelArt</h3>
-        <p><a href="http://www.ideelart.com/artists/1351-gina-werfel.html" target="_blank" rel="nofollow">http://www.ideelart.com/artists/1351-gina-werfel.html</a></p><br>
-
+        <p><a href="http://www.ideelart.com/artists/1351-gina-werfel.html" target="_blank" rel="nofollow">http://www.ideelart.com/artists/1351-gina-werfel.html</a></p>
+        <p><a href="https://www.singulart.com/en/artist/gina-werfel-1503" target="_blank" rel="nofollow">https://www.singulart.com/en/artist/gina-werfel-1503</a></p><br>
         <h3><a id="cv" href="./GW_cv.pdf" target="_blank" rel="nofollow">Curriculum Vitae</a></h3><br>
 
         <h2>Artist Statement</h2>
