--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
         <!-- Slideshow images -->
         <!--img class="slide-img" src="./images/slide show/IMG_0317.jpg"-->
         <!--img class="slide-img" src="./images/slide show/Fast Forward.jpg"-->
-        <img class="slide-img wide" src="./images/slide show/Movement, 36_x72_ diptych, acrylic, 2018.jpg" alt="Movement, 36 x 72 in diptych, acrylic, 2018">
+        <img class="slide-img" src="./images/slide show/2PT866B5.jpg" alt="New Show">
         <img class="slide-img" src="./images/slide show/Sunset Route, 48_x48_,  acrylic and mixed media, 2019.jpg" alt="Sunset Route, 48 x 48 in, acrylic and mixed media, 2019">
+        <img class="slide-img wide" src="./images/slide show/Movement, 36_x72_ diptych, acrylic, 2018.jpg" alt="Movement, 36 x 72 in diptych, acrylic, 2018">
         <img class="slide-img" src="./images/slide show/Gina Cooler-2.jpg" alt="Stencil, 30 x 30 in, oil on canvas, 2018">
         <img class="slide-img" src="./images/slide show/Borders.jpg" alt="Borders, 36 x 36 in, acrylic & mixed media, 2018">
         <img class="slide-img" src="./images/slide show/IMG_9362.jpg" alt="Beach, 40 x 32 in, oil on canvas, 2018">
