New show banner
Added a banner container with two columns, one with the show's information text and the other with the image. Styled the text, image, and padding, and made it responsive.

--- a/index.html
+++ b/index.html
@@ -44,12 +44,23 @@
 
     <!-- Content wrapper pads the margins from the header and footer -->
     <div class="content-wrapper">
+      <!-- New show banner container -->
+      <div class="banner">
+        <div class="column">
+          <h3>Upcoming Show</h3>
+          <h2>In Context</h2>
+          <p>Sept 7 - Oct 2</p>
+          <p>Reception: Sept 9, 5-8 pm</p>
+        </div>
+        <div class="column">
+          <img src="./images/shows/Prince Street Gallery/psgbanner.png"/>
+        </div>
+      </div>
       <!-- Slideshow container -->
       <div class="slideshow">
         <!-- Slideshow images -->
         <!--img class="slide-img" src="./images/slide show/IMG_0317.jpg"-->
         <!--img class="slide-img" src="./images/slide show/Fast Forward.jpg"-->
-        <img class="slide-img" src="./images/slide show/2PT866B5.jpg" alt="New Show">
         <img class="slide-img" src="./images/slide show/Sunset Route, 48_x48_,  acrylic and mixed media, 2019.jpg" alt="Sunset Route, 48 x 48 in, acrylic and mixed media, 2019">
         <img class="slide-img wide" src="./images/slide show/Movement, 36_x72_ diptych, acrylic, 2018.jpg" alt="Movement, 36 x 72 in diptych, acrylic, 2018">
         <img class="slide-img" src="./images/slide show/Gina Cooler-2.jpg" alt="Stencil, 30 x 30 in, oil on canvas, 2018">
