Show slideshow images
Added 3 new images from the new show to the frontpage slideshow.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         <!-- Slideshow images -->
         <!--img class="slide-img" src="./images/slide show/IMG_0317.jpg"-->
         <!--img class="slide-img" src="./images/slide show/Fast Forward.jpg"-->
+        <img class="slide-img" src="./images/slide show/Plunge 2.jpg" alt="Plunge">
+        <img class="slide-img" src="./images/slide show/Tapestry 40_x30_, oil and spray paint, 2021.jpg" alt="Tapestry 40_x30_, oil and spray paint, 2021">
+        <img class="slide-img" src="./images/slide show/IMG_1925.jpg" alt="Painting">
         <img class="slide-img" src="./images/slide show/Sunset Route, 48_x48_,  acrylic and mixed media, 2019.jpg" alt="Sunset Route, 48 x 48 in, acrylic and mixed media, 2019">
         <img class="slide-img wide" src="./images/slide show/Movement, 36_x72_ diptych, acrylic, 2018.jpg" alt="Movement, 36 x 72 in diptych, acrylic, 2018">
         <img class="slide-img" src="./images/slide show/Gina Cooler-2.jpg" alt="Stencil, 30 x 30 in, oil on canvas, 2018">
