--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
 
   <body>
 
-    <!-- Background image wrapping around everything else -->
-  	<!--div class="background"-->
-
   	<!-- The navigation bar at the top of the screen -->
     <header class="homepage header">
       <a class="title" href="/">Gina Werfel</a>
@@ -33,9 +30,9 @@
       	<nav class="homepage navigation">
       	  <a href="./painting.php">Paintings</a>
       	  <a href="./paper.php">Works On Paper</a>
+          <a href="./exhibitions.html">Exhibitions</a>
       	  <a href="./public-art.html">Special Projects</a>
       	  <a href="./archive.php">Archive</a>
-      	  <!--a href="./reviews.html">Publications</a-->
       	  <a href="./news.html">Press</a>
       	  <a href="./about.html">About</a>
       	</nav>
@@ -85,8 +82,6 @@
         <p>&copy Gina Werfel</p>
       </div>
     </footer>
-
-<!--/div-->
 
   </body>
 
