--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     <!-- Content wrapper pads the margins from the header and footer -->
     <div class="content-wrapper">
       <!-- New show banner container -->
-      <div class="banner">
+      <div class="banner front">
         <div class="column">
           <h3>Upcoming Show</h3>
-          <h2>In Context</h2>
+          <a href="./exhibitions.html#prince" title="More info"><h2>In Context</h2></a>
           <p>Sept 7 - Oct 2</p>
           <p>Reception: Sept 9, 5-8 pm</p>
         </div>
