--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- New show banner container -->
       <div class="banner front">
         <div class="column">
-          <h3>Upcoming Show</h3>
+          <h3>Current Show</h3>
           <a href="./exhibitions.html#prince" title="More info"><h2>In Context</h2></a>
           <p>Sept 7 - Oct 2</p>
           <p>Reception: Sept 9, 5-8 pm</p>
