More exhibition changes
Removed the exhibition notice from the front page. Removed the studio images from the Prince exhibition and added the remaining image info. Removed the heading from the Oakland exhibition and corrected some typos. Moved a studio image to the about page and added a max-width to it. Updated the client's CV on the about page.

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
       <!-- About wrapper pads the main content and aligns it to the center -->
       <div class="about-wrapper">
 
-        <img class="about-img" src="./images/Gina in Studio.jpg">
+        <img class="about-img" src="./images/IMG_2816 (1).jpg">
 
         <h2>Contact</h2>
         <h3>Gina Werfel</h3>
@@ -57,6 +57,8 @@
         <p><a href="https://www.singulart.com/en/artist/gina-werfel-1503" target="_blank" rel="nofollow">https://www.singulart.com/en/artist/gina-werfel-1503</a></p><br>
         <h3><a id="cv" href="./GW_cv.pdf" target="_blank" rel="nofollow">Curriculum Vitae</a></h3><br>
 
+        <img class="about-img" src="./images/Gina in Studio.jpg">
+        
         <h2>Artist Statement</h2>
         <p>Werfel’s current paintings and works on paper involve multiple voices. Clearly defined graphical lines and stencils exist in tension with more naturalistic gestures, which fade in and out of focus like distant memories in a shallow, ambiguous space. The layering, and the contrast between the stencilled and hand-drawn marks, make reference to the influence of Photoshop on contemporary visual culture. The removal of the hand in a recent series of process-driven mono-prints highlights this dichotomy.</p>
         <p>Recent travels abroad have influenced Werfel’s work. Inspired by a stay in Singapore in 2015 where she taught at Yale-NUS College, she began to employ spray-painted stencils over gestural brush marks, making use of everyday textured materials as well as Chinese New Year’s decorations from Singapore. In 2016 while a visiting artist at the American Academy in Rome, Werfel renewed her interest in Baroque ceiling paintings and incorporated their spatial complexity into compositions. She began to empty out the center and vary the density of marks.</p>
