Forgot to hit save

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -87,8 +87,8 @@
         </div>
       </div>
       <div class="banner exhibition description">
-        <p>Gina Werfel is an American abstract painter who uses vivid color, gesture, and complex compositional structures to create dynamic and rhythimic visual expressions.</p>
-        <p>Werfel works with a mixture of oils, acrylics, and mixed media on canvas. Her background is in landscape painting, which helped her to develop a keen eye for light, color relationships, and compositional harmony. As she transitioned into abstraction, she developed her ability to use those sensibitlities to convey complex and nuanced emotional states.</p>
+        <p>Gina Werfel is an American abstract painter who uses vivid color, gesture, and complex compositional structures to create dynamic and rhythmic visual expressions.</p>
+        <p>Werfel works with a mixture of oils, acrylics, and mixed media on canvas. Her background is in landscape painting, which helped her to develop a keen eye for light, color relationships, and compositional harmony. As she transitioned into abstraction, she developed her ability to use those sensibilities to convey complex and nuanced emotional states.</p>
         <p>In her abstract paintings, she employs expressionist, open gestures to create bursts of movement and energy. Her color choices create a range of tones, from the muted and serene to the vibrant and electric. In addition to traditional brushwork, she also incorporates mediums like spray-paint and stencils to build complex layers that draw the viewer in, inviting exploration and discovery.</p>
       </div>
       <!-- Image grid using the same grid as archive -->
